updated dimensions of canvas

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,8 +145,10 @@
         const stepX = 1
         const stepY = 1
 
-        const xMin = -20, xMax = 20;
-        const yMin = -15, yMax = 15;
+        // const xMin = -20, xMax = 20;
+        // const yMin = -15, yMax = 15;
+        const xMin = -5, xMax = 5;
+        const yMin = -5, yMax = 5;
 
         // Load image
         const img = new Image();
