qr code gen ver 2

--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -6,6 +6,6 @@
     <title>qr code page</title>
 </head>
 <body>
-    <img src="https://api.qrserver.com/v1/create-qr-code/?data=isaac%20is%20a%20nigga&amp;size=500x500" alt="Isaac's GYATT" title="Important Information" />
+    <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://isaacisanigga&amp;size=500x500" alt="Isaac's GYATT" title="Important Information" />
 </body>
 </html>
