--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -62,14 +62,14 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="/employees"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 16">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M1 8h11m0 0L8 4m4 4-4 4m4-11h3a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-3" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Empolyees</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Employees</span>
                     </a>
                 </li>
                 <li>
@@ -98,7 +98,7 @@
         >
           <li class="inline-flex items-center">
             <a
-              href="#"
+              href="/home"
               class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
             >
               <svg
