view individual employee but dun work

--- a/templates/employees.html
+++ b/templates/employees.html
@@ -220,7 +220,7 @@
                             <img class="w-10 h-10 rounded-full"
                                 src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="Jese image">
                             <div class="ps-3">
-                                <div class="text-base font-semibold">{{ user.name }}</div>
+                                <a href="/view_employee" class="text-base font-semibold">{{ user.name }}</a>
                                 <div class="font-normal text-gray-500">{{ user.email }}</div>
                             </div>
                         </th>
