--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -98,7 +98,7 @@
         >
           <li class="inline-flex items-center">
             <a
-              href="/home"
+              href="#"
               class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
             >
               <svg
