--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -137,6 +137,7 @@
                 class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
                 >Scan QR Code</a
               >
+              
             </div>
           </li>
         </ol>
@@ -146,7 +147,7 @@
             <!-- <h3 class="text-3xl font-bold dark:text-white mt-5">Scan QR code</h3> -->
             <!-- <h2 class="text-4xl font-bold dark:text-white mt-10">Scan QR Code</h2> -->
             <h1 class="text-5xl font-bold dark:text-white mt-10">Scan QR Code</h1>
-
+                <a href="/view-checkin" class="dark:text-white mt-4 dark:hover:text-red-500 dark:hover:underline" >Check-in status</a>
 
             <!-- </div> -->
             <img class="mt-10" src="https://api.qrserver.com/v1/create-qr-code/?data=isaac%20is%20a%20nigga&amp;size=400x400" alt="Isaac's GYATT" title="Important Information" />
