--- a/templates/view_checkin.html
+++ b/templates/view_checkin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Check-in</title>
     <link href="../static/dist/css/output.css" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
 </head>
 
@@ -180,7 +181,6 @@
                     x-on:input="search($event.target.value)">
             </div>
         </div>
-
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
@@ -195,55 +195,61 @@
                             Name
                         </th>
                         <th scope="col" class="px-6 py-3">
+                            Position
+                        </th>
+                        <th scope="col" class="px-6 py-3">
                             Status
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Date
+                            Time
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                <template x-for="user in listItems">
-                    <tr
-                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                        <td class="w-4 p-4">
-                            <div class="flex items-center">
-                                <input id="checkbox-table-search-1" type="checkbox"
-                                    class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
-                            </div>
-                        </td>
-                        <th scope="row"
-                            class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                            <img class="w-10 h-10 rounded-full"
-                                src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="Jese image">
-                            <div class="ps-3">
-                                <a href="/view_employee" class="text-base font-semibold" x-text="user.name"></a>
-                                
-                            </div>
-                        </th>
-                        <td class="px-6 py-4">
-                            <div class="font-normal text-gray-500 flex items-center">
-                                <template x-if= "user.status">
-                                <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> 
-                                <div class="text-base font-semibold">Checked In </div>
-                                </template>
-                                <template x-if="!user.status">
-                                <div class="h-2.5 w-2.5 rounded-full bg-red-500 me-2"></div> 
-                                <div class="text-base font-semibold">Absent</div>
-                            </template>
-                            </div>
-                        </td>
-                        <td class="px-6 py-4">
-                            <div class="flex items-center gap-2">
-                                <p class="text-base font-semibold " x-text="user.Date"></p>
-                                <p class="text-base font-semibold" x-text="user.time"></p>
-                            </div>
-                        </td>
-                        
-                    </tr>
-                </template>
-                 </tbody>
+                    <template x-for="user in listItems">
+
+                        <tr
+                            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                            <td class="w-4 p-4">
+                                <div class="flex items-center">
+                                    <input id="checkbox-table-search-1" type="checkbox"
+                                        class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                    <label for="checkbox-table-search-1" class="sr-only">checkbox</label>
+                                </div>
+                            </td>
+                            <th scope="row"
+                                class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
+                                <img class="w-10 h-10 rounded-full"
+                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg"
+                                    alt="Jese image">
+                                <div class="ps-3">
+                                    <div class="text-base font-semibold" x-text="user.name"></div>
+                                    <div class="font-normal text-gray-500" x-text="user.email"></div>
+                                </div>
+                            </th>
+                            <td class="px-6 py-4" x-text="user.job">
+                            </td>
+                            <td class="px-6 py-4">
+                                <div class="flex items-center">
+                                    <template x-if="user.status">
+                                        <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div>
+                                    </template>
+                                    <template x-if="!user.status">
+                                        <div class="h-2.5 w-2.5 rounded-full bg-red-500 me-2"></div>
+                                    </template>
+                                    <p x-text="user.status ? 'Checked in' : 'Absent'"></p>
+                                </div>
+                            </td>
+                            <td class="px-6 py-4">
+                                <p class="flex items-center gap-1">
+                                    <span x-text="user.Date"></span>
+                                    <span>-</span>
+                                    <span x-text="user.time"></span>
+                                </p>
+                            </td>
+                        </tr>
+                    </template>
+                </tbody>
             </table>
         </div>
     </div>
@@ -258,13 +264,8 @@
 
     const updated = JSON.parse(JSON.stringify(original))
     console.log(updated)
-    const search = (keyword) => {
 
-        if (!keyword) {
-        // Reset the listItems if the keyword is empty
-        Alpine.store('data').listItems = JSON.parse(JSON.stringify(original.listItems));
-        return;
-    }
+    const search = (keyword) => {
         Alpine.store('data').listItems = []
         for (let i = 0; i < original.listItems.length; i++) {
             item = original.listItems[i]
