started on post req handler for check-in for and made some tweaks for ui

--- a/templates/railtech-qr.html
+++ b/templates/railtech-qr.html
@@ -15,7 +15,7 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
   </head>
-  <body class="dark bg-gray-950">
+  <body class="dark bg-gray-900">
     <aside id="default-sidebar"
         class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
         aria-label="Sidebar">
@@ -133,6 +133,31 @@
                 />
               </svg>
               <a
+                href="view-tar"
+                class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
+                >SBST123456789A</a
+              >
+              
+            </div>
+          </li>
+          <li>
+            <div class="flex items-center">
+              <svg
+                class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 6 10"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="m1 9 4-4-4-4"
+                />
+              </svg>
+              <a
                 href="#"
                 class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
                 >Scan QR Code</a
@@ -151,6 +176,7 @@
 
             <!-- </div> -->
             <img class="mt-10" src="https://api.qrserver.com/v1/create-qr-code/?data=isaac%20is%20a%20nigga&amp;size=400x400" alt="Isaac's GYATT" title="Important Information" />
+            <div class=""></div>
       </main>
     </div>
   </body>
