--- a/templates/view-tars.html
+++ b/templates/view-tars.html
@@ -241,7 +241,7 @@
                                 </div>
                             </td>
                             <td class="px-6 py-4">
-                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit user</a>
+                                <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit TAA</a>
                             </td>
                         </tr>
                     </template>
